# Rentsell

./: .gitignore  JustePrixImmo.jsx  README.md  apartments.json  docker-compose.yml  index.html  package-lock.json  package.json  start-dev.sh  vite.config.js
.claude/: launch.json
.github/workflows/: deploy.yml  refresh-listings.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  models.py  schemas.py
backend/app/api/: main.py
backend/app/api/routes/: cities.py  listings.py
backend/app/pipeline/: deduplicator.py  image_mirror.py  normalizer.py  validator.py
backend/app/scrapers/: base.py  browser_scraper.py  http_scraper.py  laforet.py  pap.py  seloger.py
backend/app/worker/: celery_app.py  scheduler.py  tasks.py
backend/tests/: conftest.py  test_api_listings.py  test_deduplicator.py  test_normalizer.py  test_validator.py
docs/: SFD.md
scripts/: export_listings.py  run_scraper.py  seed.py
src/: App.jsx  index.css
src/hooks/: useFetchListings.js
